--- a/gettext-tools/configure.ac
+++ b/gettext-tools/configure.ac
@@ -747,10 +747,12 @@ AC_CONFIG_FILES([projects/Makefile])
 
 AC_CONFIG_FILES([styles/Makefile])
 
+AC_CONFIG_FILES([wizard/Makefile])
+AC_CONFIG_FILES([wizard/gettextize], [chmod a+x wizard/gettextize])
+
 AC_CONFIG_FILES([emacs/Makefile])
 
 AC_CONFIG_FILES([misc/Makefile])
-AC_CONFIG_FILES([misc/gettextize], [chmod a+x misc/gettextize])
 AC_CONFIG_FILES([misc/autopoint], [chmod a+x misc/autopoint])
 AC_CONFIG_FILES([misc/convert-archive], [chmod a+x misc/convert-archive])
 
