New directory gettext-tools/wizard/po-templates/traditional/.
* gettext-tools/wizard/po-templates/traditional/*: New files, moved here from
gettext-runtime/po/.
* gettext-tools/wizard/po-templates/traditional/Makefile.in.in (install-data,
installdirs-data, uninstall-data, dist2): Remove special code for the
'gettext-tools' package.
* gettext-tools/wizard/po-templates/traditional/Makevars.template: Moved here
from gettext-tools/po/.
* autogen.sh: Copy the contents of the gettext-runtime/po/ and gettext-tools/po/
directories from gettext-tools/wizard/po-templates/traditional/.
* gettext-tools/wizard/Makefile.am (pkgdatadir, podir): New variables.
(po_DATA): Add po-templates/traditional/*.
(EXTRA_DIST): Likewise.
(uninstall-sources): Also remove $(podir)/Makevars.
* Makefile.am (distcheck-hook): Update.

--- a/.gitignore
+++ b/.gitignore
@@ -392,7 +392,15 @@
 /gettext-runtime/libasprintf/ChangeLog
 /gettext-tools/ChangeLog
 /gettext-tools/examples/ChangeLog
-# Files copied from gettext-runtime:
+# Files copied:
+/gettext-runtime/po/Makefile.in.in
+/gettext-runtime/po/Rules-quot
+/gettext-runtime/po/boldquot.sed
+/gettext-runtime/po/en@boldquot.header
+/gettext-runtime/po/en@quot.header
+/gettext-runtime/po/insert-header.sed
+/gettext-runtime/po/quot.sed
+/gettext-runtime/po/remove-potcdate.sed
 /gettext-tools/ABOUT-NLS
 /gettext-tools/po/Makefile.in.in
 /gettext-tools/po/Rules-quot
