New program 'po-fetch'.
* gettext-tools/misc/po-fetch.in: New file.
* gettext-tools/misc/Makefile.am: New file.
* gettext-tools/configure.ac: Add AC_CONFIG_FILES invocations for the misc/
directory.
* gettext-tools/Makefile.am (SUBDIRS): Add misc.
(EXTRA_DIST): Remove misc/disclaim-translations.txt.
(pkgdata_DATA): Remove variable.
* gettext-tools/doc/po-fetch.texi: New file.
* gettext-tools/doc/Makefile.am (gettext_TEXINFOS): Add it.
* gettext-tools/doc/gettext.texi (po-fetch): Add global menu entry.
(po-fetch Invocation): New section.
* PACKAGING: Mention the installed 'po-fetch' program.
* NEWS: Mention 'po-fetch'.

--- a/.gitignore
+++ b/.gitignore
@@ -454,6 +454,7 @@
 /gettext-tools/libgrep/Makefile.in
 /gettext-tools/m4/Makefile.in
 /gettext-tools/man/Makefile.in
+/gettext-tools/misc/Makefile.in
 /gettext-tools/projects/Makefile.in
 /gettext-tools/src/Makefile.in
 /gettext-tools/styles/Makefile.in
@@ -673,6 +674,8 @@ autom4te.cache/
 /gettext-tools/m4/Makefile
 /gettext-tools/man/Makefile
 /gettext-tools/man/x-to-1
+/gettext-tools/misc/Makefile
+/gettext-tools/misc/po-fetch
 /gettext-tools/po/Makefile.in
 /gettext-tools/po/Makefile
 /gettext-tools/projects/Makefile
