--- a/gettext-tools/examples/hello-objc-gnustep/po/GNUmakefile
+++ b/gettext-tools/examples/hello-objc-gnustep/po/GNUmakefile
@@ -91,6 +91,15 @@ CATALOGS = $(STRINGSFILES) $(ENSTRINGSFILES)
 
 .SUFFIXES: .po .gpo .nop .po-create
 
+# This target fetches the PO files, produced by translators, from a
+# translations project's site on the internet, and generates the associated
+# LINGUAS file (for packages that use such a translations project and where
+# this translation project does not already commit the PO files and the LINGUAS
+# file into the version control repository of the package automatically).
+.PHONY: fetch-po
+fetch-po:
+	./fetch-po
+
 # This target creates a merged PO file (mostly for debugging purposes).
 .po.gpo:
 	@lang=`echo $* | sed -e 's,.*/,,'`; \
